# -*- coding: utf-8 -*-
# [1-setup.cfg]
[bumpversion]
current_version = 2021.3.0
commit = False
tag = False

[bumpversion:file:README.rst]

[bumpversion:file:VERSION]

[bumpversion:file:ether_py/__init__.py]

[bumpversion:file:docs/conf.py]
# ![1-setup.cfg]

[bdist_wheel]
universal = 1

[flake8]
ignore = F403,F405,W503
max-line-length = 80
exclude = tests/*
max-complexity = 10

[metadata]
name = ether_py
description = The ether-py Ethereum command line interface.
description_file = README.rst
author = Dave Dittrich
author_email = dave.dittrich@gmail.com
download_url = https://github.com/davedittrich/ether_py/tarball/master
url = https://github.com/davedittrich/ether_py
python_requires = >=3.6
license = Apache Software License 2.0
keywords =
    ether_py
    ether-py
    cliff

# Development Status :: 3 - Alpha
# Development Status :: 4 - Beta
# Development Status :: 5 - Production/Stable

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities
scripts =
    bin/ether_py

[options.entry_points]
console_scripts =
    ether-py = ether_py.__main__:main
ether_py =
    about = ether_py.about:About
    account show = ether_py.account.show:AccountShow
    block get = ether_py.block.get:BlockGet
    block show = ether_py.block.show:BlockShow
    demo greeter call = ether_py.demo.greeter:GreeterCall
    demo greeter compile = ether_py.demo.greeter:GreeterCompile
    demo greeter load = ether_py.demo.greeter:GreeterLoad
    eth send = ether_py.eth.send:EthSend
    eth show = ether_py.eth.show:EthShow
    logs show = ether_py.logs.show:LogsShow
    net show = ether_py.net.show:NetShow
    tx show = ether_py.tx.show:TxShow

# vim: set ts=4 sw=4 tw=0 et :
